# ai_recipes

./: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  Dockerfile  Jenkinsfile  alembic.ini  docker-compose.yml  entrypoint.sh  healthcheck.py  poetry-pyproject.toml  pyproject.toml
alembic/: README  env.py
app/: main.py
app/api/: router.py
app/api/_base/: base_controllers.py  checks.py  mixins.py  routers.py
app/api/dependencies/: permissions.py  services.py
app/api/routes/: auth_router.py  minio_router.py  (+3 more)
app/config/: __init__.py  base_setting.py  config.yaml  config_loader.py  config_manager.py  config_schema.py  default_config.yaml  dev.yaml  permissions_enum.py  settings.py  test.yaml
app/core/: api_response.py  global_exception.py  logger.py  middleware.py  minio_client.py  request_scope.py  response_codes.py
app/crud/: __init__.py  base_repo.py  recipe_repo.py  repository_factory.py  user_repo.py
app/db/: all_repositories.py  get_repo_factory.py  repo_registrar.py  repository_factory_auto.py  repository_factory_manul.py  repository_generic.py  session.py
app/domain/: event_bus.py  events.py
app/enums/: auth_method.py  file_enums.py  query_enums.py  response_codes.py
app/metrics/: repo_metrics.py
app/models/: __init__.py  file_record.py  recipe.py  user.py
app/repo/: repository_factory_manul.py  repository_generic.py
app/router/: router.py
app/schemas/: auth_schemas.py  file_record_schemas.py  file_schemas.py  minio_schemas.py  page_schemas.py  permission_schemas.py  recipe_schemas.py  role_schemas.py  user_context.py  user_schemas.py
app/services/: auth_service.py  file_record_service.py  file_service.py  minio_service.py  permission_service.py  recipe_service.py  role_service.py  user_service.py
app/utils/: cookie_utils.py  jwt_utils.py  redis_client.py  redis_dep.py  url_builder.py
sync_pg_data/: sync_pg_data.py  sync_pg_data.sh
tests/: test_main.py
(+127 files in other folders)
