[project]
name = "ai-recipes"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
    "httpx",
    "email-validator",
    "passlib",
    "bcrypt",
    "boto3",
    "pyyaml",
    "python-multipart",
    "tenacity",
    "pyjwt==2.10.1",
    "python-jose",
    "prometheus_client",
    "aioredis",
    "slugify>=0.0.1",
]
